--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <header>
             <h1>Minha Lista de Tarefas</h1>
             <div class="progress-container">
-                <div class="progress-bar" id="progressBar"></div>
+                <div class="progress-bar" id="progressBar">
+                </div>
             </div>
         </header>
 
